replace _16sb0g4v -> hidden block-sm, rename _1udzt2s -> page-shell-mobile__display-none in merchandising

--- a/merchandising.html
+++ b/merchandising.html
@@ -596,8 +596,8 @@
                                                             </div>
                                                           </div>
                                                         </div>
-                                                        <div class="_16sb0g4v">
-                                                          <div class="_1udzt2s">
+                                                        <div class="hidden block-sm">
+                                                          <div class="page-shell-mobile__display-none">
                                                             <div
                                                               class="_mmvgcv"
                                                               style="
@@ -1085,8 +1085,8 @@
                                                             </div>
                                                           </div>
                                                         </div>
-                                                        <div class="_16sb0g4v">
-                                                          <div class="_1udzt2s">
+                                                        <div class="hidden block-sm">
+                                                          <div class="page-shell-mobile__display-none">
                                                             <div
                                                               class="_mmvgcv"
                                                               style="
@@ -1262,8 +1262,8 @@
                                                           </h2>
                                                         </div>
                                                       </div>
-                                                      <div class="_16sb0g4v">
-                                                        <div class="_1udzt2s">
+                                                      <div class="hidden block-sm">
+                                                        <div class="page-shell-mobile__display-none">
                                                           <div
                                                             class="flex-column"
                                                             style="
@@ -1539,8 +1539,8 @@
                                                             </div></a
                                                           >
                                                         </div>
-                                                        <div class="_16sb0g4v">
-                                                          <div class="_1udzt2s">
+                                                        <div class="hidden block-sm">
+                                                          <div class="page-shell-mobile__display-none">
                                                             <a
                                                               href="/s/Manila/homes?place_id=ChIJi8MeVwPKlzMRH8FpEHXV0Wk&amp;refinement_paths%5B%5D=%2Fhomes&amp;tab_id=home_tab"
                                                               class="main_content__agenda-list-btn"
@@ -1873,8 +1873,8 @@
                                                             </div></a
                                                           >
                                                         </div>
-                                                        <div class="_16sb0g4v">
-                                                          <div class="_1udzt2s">
+                                                        <div class="hidden block-sm">
+                                                          <div class="page-shell-mobile__display-none">
                                                             <a
                                                               href="/s/Nasugbu/homes?place_id=ChIJKbyDTaWWvTMRk8HiLNcRTPA&amp;refinement_paths%5B%5D=%2Fhomes&amp;tab_id=home_tab"
                                                               class="main_content__agenda-list-btn"
@@ -2207,8 +2207,8 @@
                                                             </div></a
                                                           >
                                                         </div>
-                                                        <div class="_16sb0g4v">
-                                                          <div class="_1udzt2s">
+                                                        <div class="hidden block-sm">
+                                                          <div class="page-shell-mobile__display-none">
                                                             <a
                                                               href="/s/Mabini/homes?place_id=ChIJLbgdokcHvTMRRITNRyJ3h2k&amp;refinement_paths%5B%5D=%2Fhomes&amp;tab_id=home_tab"
                                                               class="main_content__agenda-list-btn"
@@ -2543,6 +2543,8 @@
                                                         </div>
                                                         <div class="_16sb0g4v">
                                                           <div class="_1udzt2s">
+                                                        <div class="hidden block-sm">
+                                                          <div class="page-shell-mobile__display-none">
                                                             <a
                                                               href="/s/Laiya/homes?place_id=ChIJuSORkKwlvTMRdTnYpcxm8RY&amp;refinement_paths%5B%5D=%2Fhomes&amp;tab_id=home_tab"
                                                               class="main_content__agenda-list-btn"
@@ -2785,6 +2787,8 @@
                                                     </div>
                                                     <div class="_16sb0g4v">
                                                       <div class="_1udzt2s">
+                                                    <div class="hidden block-sm">
+                                                      <div class="page-shell-mobile__display-none">
                                                         <div
                                                           class="flex-column"
                                                           style="
@@ -3007,8 +3011,8 @@
                                                             </div>
                                                           </div>
                                                         </div>
-                                                        <div class="_16sb0g4v">
-                                                          <div class="_1udzt2s">
+                                                        <div class="hidden block-sm">
+                                                          <div class="page-shell-mobile__display-none">
                                                             <div
                                                               class="_mmvgcv"
                                                               style="
@@ -3286,8 +3290,8 @@
                                                             </div>
                                                           </div>
                                                         </div>
-                                                        <div class="_16sb0g4v">
-                                                          <div class="_1udzt2s">
+                                                        <div class="hidden block-sm">
+                                                          <div class="page-shell-mobile__display-none">
                                                             <div
                                                               class="_mmvgcv"
                                                               style="
@@ -3620,8 +3624,8 @@
                                                             </div>
                                                           </div>
                                                         </div>
-                                                        <div class="_16sb0g4v">
-                                                          <div class="_1udzt2s">
+                                                        <div class="hidden block-sm">
+                                                          <div class="page-shell-mobile__display-none">
                                                             <div
                                                               class="_rion6he"
                                                               style="
@@ -4027,8 +4031,8 @@
                                                             </div>
                                                           </div>
                                                         </div>
-                                                        <div class="_16sb0g4v">
-                                                          <div class="_1udzt2s">
+                                                        <div class="hidden block-sm">
+                                                          <div class="page-shell-mobile__display-none">
                                                             <div
                                                               class="_mmvgcv"
                                                               style="
@@ -5114,7 +5118,7 @@
                                                     --mls-wr-cr-xl: 12px;
                                                   "
                                                 >
-                                                  <div class="_16sb0g4v"></div>
+                                                  <div class="hidden block-sm"></div>
                                                   <div class="hidden__md">
                                                     <div class="header__logo">
                                                       <div
@@ -5940,7 +5944,7 @@
                                                       /></picture>
                                                     </div>
                                                   </div>
-                                                  <div class="_16sb0g4v"></div>
+                                                  <div class="hidden block-sm"></div>
                                                   <div class="hidden__md">
                                                     <div class="header__logo">
                                                       <div
@@ -6289,7 +6293,7 @@
                                           >
                                             <div class="_1jnlcv5q">
                                               <span
-                                                ><div class="_16sb0g4v"></div>
+                                                ><div class="hidden block-sm"></div>
                                                 <div class="hidden__md">
                                                   <div class="header__logo">
                                                     <div
@@ -6373,7 +6377,7 @@
                                             <div class="_gjp6ac0">
                                               <div class="_a0tp2q">
                                                 <div>
-                                                  <div class="_16sb0g4v"></div>
+                                                  <div class="hidden block-sm"></div>
                                                   <div class="hidden__md">
                                                     <div class="header__logo">
                                                       <a
@@ -6887,7 +6891,7 @@
                                                   </div>
                                                 </div>
                                                 <div>
-                                                  <div class="_16sb0g4v"></div>
+                                                  <div class="hidden block-sm"></div>
                                                   <div class="hidden__md">
                                                     <div class="header__logo">
                                                       <a
@@ -7398,7 +7402,7 @@
                                                   </div>
                                                 </div>
                                                 <div>
-                                                  <div class="_16sb0g4v"></div>
+                                                  <div class="hidden block-sm"></div>
                                                   <div class="hidden__md">
                                                     <div class="header__logo">
                                                       <a
@@ -7909,7 +7913,7 @@
                                                   </div>
                                                 </div>
                                                 <div>
-                                                  <div class="_16sb0g4v"></div>
+                                                  <div class="hidden block-sm"></div>
                                                   <div class="hidden__md">
                                                     <div class="header__logo">
                                                       <a
@@ -8441,7 +8445,7 @@
                                           >
                                             <div class="_1jnlcv5q">
                                               <span
-                                                ><div class="_16sb0g4v"></div>
+                                                ><div class="hidden block-sm"></div>
                                                 <div class="hidden__md">
                                                   <div class="header__logo">
                                                     <div
@@ -8543,7 +8547,7 @@
                                                     "
                                                   >
                                                     <div
-                                                      class="_16sb0g4v"
+                                                      class="hidden block-sm"
                                                     ></div>
                                                     <div class="hidden__md">
                                                       <div class="header__logo">
@@ -9070,7 +9074,7 @@
                                                     "
                                                   >
                                                     <div
-                                                      class="_16sb0g4v"
+                                                      class="hidden block-sm"
                                                     ></div>
                                                     <div class="hidden__md">
                                                       <div class="header__logo">
@@ -9594,7 +9598,7 @@
                                                     "
                                                   >
                                                     <div
-                                                      class="_16sb0g4v"
+                                                      class="hidden block-sm"
                                                     ></div>
                                                     <div class="hidden__md">
                                                       <div class="header__logo">
@@ -10118,7 +10122,7 @@
                                                     "
                                                   >
                                                     <div
-                                                      class="_16sb0g4v"
+                                                      class="hidden block-sm"
                                                     ></div>
                                                     <div class="hidden__md">
                                                       <div class="header__logo">
@@ -10676,7 +10680,7 @@
                                         >
                                           <div class="_1jnlcv5q">
                                             <span
-                                              ><div class="_16sb0g4v"></div>
+                                              ><div class="hidden block-sm"></div>
                                               <div class="hidden__md">
                                                 <div class="header__logo">
                                                   <div
@@ -10843,7 +10847,7 @@
                                                       /></picture>
                                                     </div>
                                                   </div>
-                                                  <div class="_16sb0g4v"></div>
+                                                  <div class="hidden block-sm"></div>
                                                   <div class="hidden__md">
                                                     <div class="header__logo">
                                                       <div
@@ -11234,7 +11238,7 @@
                                                       /></picture>
                                                     </div>
                                                   </div>
-                                                  <div class="_16sb0g4v"></div>
+                                                  <div class="hidden block-sm"></div>
                                                   <div class="hidden__md">
                                                     <div class="header__logo">
                                                       <div
@@ -11599,7 +11603,7 @@
                                             <div class="_1xg5zmcz">
                                               <div>
                                                 <div class="_17t88vi">
-                                                  <div class="_16sb0g4v"></div>
+                                                  <div class="hidden block-sm"></div>
                                                   <div class="hidden__md">
                                                     <div class="header__logo">
                                                       <div
@@ -12272,7 +12276,7 @@
                                                       /></picture>
                                                     </div>
                                                   </div>
-                                                  <div class="_16sb0g4v"></div>
+                                                  <div class="hidden block-sm"></div>
                                                   <div class="hidden__md">
                                                     <div class="header__logo">
                                                       <div
