rename d-xl-block -> block-xxl

--- a/merchandising.html
+++ b/merchandising.html
@@ -5566,7 +5566,7 @@
                                                       </div>
                                                     </div>
                                                   </div>
-                                                  <div class="hidden d-xl-block">
+                                                  <div class="hidden block-xxl">
                                                     <div
                                                       class="_1rhnbeqq"
                                                       style="
@@ -6150,7 +6150,7 @@
                                                       </div>
                                                     </div>
                                                   </div>
-                                                  <div class="hidden d-xl-block">
+                                                  <div class="hidden block-xxl">
                                                     <div
                                                       class="_1rhnbeqq"
                                                       style="
@@ -6350,7 +6350,7 @@
                                                     </div>
                                                   </div>
                                                 </div>
-                                                <div class="hidden d-xl-block">
+                                                <div class="hidden block-xxl">
                                                   <div
                                                     class="flex-column"
                                                     style="padding-bottom: 48px"
@@ -6720,7 +6720,7 @@
                                                       >
                                                     </div>
                                                   </div>
-                                                  <div class="hidden d-xl-block">
+                                                  <div class="hidden block-xxl">
                                                     <a
                                                       href="/s/Manila/homes?place_id=ChIJi8MeVwPKlzMRH8FpEHXV0Wk&amp;refinement_paths%5B%5D=%2Fhomes&amp;tab_id=home_tab"
                                                       class="main_content__agenda-list-btn"
@@ -7232,7 +7232,7 @@
                                                       >
                                                     </div>
                                                   </div>
-                                                  <div class="hidden d-xl-block">
+                                                  <div class="hidden block-xxl">
                                                     <a
                                                       href="/s/Nasugbu/homes?place_id=ChIJKbyDTaWWvTMRk8HiLNcRTPA&amp;refinement_paths%5B%5D=%2Fhomes&amp;tab_id=home_tab"
                                                       class="main_content__agenda-list-btn"
@@ -7743,7 +7743,7 @@
                                                       >
                                                     </div>
                                                   </div>
-                                                  <div class="hidden d-xl-block">
+                                                  <div class="hidden block-xxl">
                                                     <a
                                                       href="/s/Mabini/homes?place_id=ChIJLbgdokcHvTMRRITNRyJ3h2k&amp;refinement_paths%5B%5D=%2Fhomes&amp;tab_id=home_tab"
                                                       class="main_content__agenda-list-btn"
@@ -8254,7 +8254,7 @@
                                                       >
                                                     </div>
                                                   </div>
-                                                  <div class="hidden d-xl-block">
+                                                  <div class="hidden block-xxl">
                                                     <a
                                                       href="/s/Laiya/homes?place_id=ChIJuSORkKwlvTMRdTnYpcxm8RY&amp;refinement_paths%5B%5D=%2Fhomes&amp;tab_id=home_tab"
                                                       class="main_content__agenda-list-btn"
@@ -8502,7 +8502,7 @@
                                                     </div>
                                                   </div>
                                                 </div>
-                                                <div class="hidden d-xl-block">
+                                                <div class="hidden block-xxl">
                                                   <div
                                                     class="flex-column"
                                                     style="padding-bottom: 48px"
@@ -8891,7 +8891,7 @@
                                                         >
                                                       </div>
                                                     </div>
-                                                    <div class="hidden d-xl-block">
+                                                    <div class="hidden block-xxl">
                                                       <a
                                                         href="/s/Manila/homes?place_id=ChIJi8MeVwPKlzMRH8FpEHXV0Wk&amp;refinement_paths%5B%5D=%2Fhomes&amp;tab_id=home_tab"
                                                         class="main_content__agenda-list-btn"
@@ -9416,7 +9416,7 @@
                                                         >
                                                       </div>
                                                     </div>
-                                                    <div class="hidden d-xl-block">
+                                                    <div class="hidden block-xxl">
                                                       <a
                                                         href="/s/Nasugbu/homes?place_id=ChIJKbyDTaWWvTMRk8HiLNcRTPA&amp;refinement_paths%5B%5D=%2Fhomes&amp;tab_id=home_tab"
                                                         class="main_content__agenda-list-btn"
@@ -9940,7 +9940,7 @@
                                                         >
                                                       </div>
                                                     </div>
-                                                    <div class="hidden d-xl-block">
+                                                    <div class="hidden block-xxl">
                                                       <a
                                                         href="/s/Mabini/homes?place_id=ChIJLbgdokcHvTMRRITNRyJ3h2k&amp;refinement_paths%5B%5D=%2Fhomes&amp;tab_id=home_tab"
                                                         class="main_content__agenda-list-btn"
@@ -10464,7 +10464,7 @@
                                                         >
                                                       </div>
                                                     </div>
-                                                    <div class="hidden d-xl-block">
+                                                    <div class="hidden block-xxl">
                                                       <a
                                                         href="/s/Laiya/homes?place_id=ChIJuSORkKwlvTMRdTnYpcxm8RY&amp;refinement_paths%5B%5D=%2Fhomes&amp;tab_id=home_tab"
                                                         class="main_content__agenda-list-btn"
@@ -10731,7 +10731,7 @@
                                                   </div>
                                                 </div>
                                               </div>
-                                              <div class="hidden d-xl-block">
+                                              <div class="hidden block-xxl">
                                                 <div
                                                   class="flex-column"
                                                   style="padding-bottom: 48px"
@@ -11059,7 +11059,7 @@
                                                       </div>
                                                     </div>
                                                   </div>
-                                                  <div class="hidden d-xl-block">
+                                                  <div class="hidden block-xxl">
                                                     <div
                                                       class="_1rhnbeqq"
                                                       style="
@@ -11452,7 +11452,7 @@
                                                       </div>
                                                     </div>
                                                   </div>
-                                                  <div class="hidden d-xl-block">
+                                                  <div class="hidden block-xxl">
                                                     <div
                                                       class="_1rhnbeqq"
                                                       style="
@@ -11980,7 +11980,7 @@
                                                       </div>
                                                     </div>
                                                   </div>
-                                                  <div class="hidden d-xl-block">
+                                                  <div class="hidden block-xxl">
                                                     <div
                                                       class="_1rhnbeqq"
                                                       style="
@@ -12490,7 +12490,7 @@
                                                       </div>
                                                     </div>
                                                   </div>
-                                                  <div class="hidden d-xl-block">
+                                                  <div class="hidden block-xxl">
                                                     <div
                                                       class="_1rhnbeqq"
                                                       style="
