--- a/resources.html
+++ b/resources.html
@@ -3267,7 +3267,7 @@
                                         </div>
                                       </div>
                                     </div>
-                                    <div class="hidden d-xl-block">
+                                    <div class="hidden block-xxl">
                                       <div class="vh-100">
                                         <div class="relative">
                                           <div
